Fix table alignment on mobile

--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -22,11 +22,12 @@
   font-family: arial, sans-serif;
   border-collapse: collapse;
   table-layout: fixed;
-
-  @include breakpoint('large') {
     margin-left: auto;
     margin-right: auto;
-  }
+  // @include breakpoint('large') {
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
 
   &__wrapper {
     background-color: $color-background-light-yellow;
